{
    "name": "Mouse",
    "maps": [
        {
            "name": "Mouse",
            "id": "46768c54-0778-4230-a488-a4ce0cec2f98",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "d0c440da-87fd-4d72-9f84-eafac97ed034",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "46538050-e04a-4f28-8421-66131d35f255",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "0e43995f-6344-47c5-9033-cfd9b74d6968",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "54a51a5e-e974-4d40-bb61-8d0a7d8b0c0b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0d35903-1d4a-4475-84ea-d4fa80f15fc3",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a0e7cc2-126f-44b0-8771-bfb9e1de441a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}